Carousel positioning fixed, white space added

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -151,7 +151,6 @@ background: rgba(0, 0, 0, 0.7);
 	border-spacing: 0.25rem;
 	border-color: white;
 	border-radius: 15%;
-	height: 70%;
 	width: 55%;
 	margin: 10% auto;
 	align-content: center;
